--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,6 +3,8 @@ name: Build for CI
 on:
   push:
     branches: [ "main" ]
+    paths-ignore:
+      - "**.md"
   pull_request:
     branches: [ "main" ]
 
