--- a/.github/workflows/release-nuget.yml
+++ b/.github/workflows/release-nuget.yml
@@ -22,18 +22,16 @@ jobs:
           dotnet-version: 6.0.x
       - name: Install .NET MAUI
         run: dotnet workload install maui
-      - name: Set VERSION variable from tag
-        run: |
-          echo "VERSION=${GITHUB_REF/refs\/tags\/v/}" >> $env:GITHUB_ENV
-          echo "$env:VERSION"
-          echo "${{ env.VERSION }}"
+      - name: Get version information from tag
+        id: get_version
+        uses: battila7/get-version-action@v2
       - name: Restore dependencies
         run: dotnet restore src\Plugin.Maui.Audio.sln
       - name: Build
-        run: dotnet build src\Plugin.Maui.Audio.sln -c Release /p:Version=$env:VERSION
+        run: dotnet build src\Plugin.Maui.Audio.sln -c Release /p:Version=${{ steps.get_version.outputs.version }}
       - name: Pack
-        run: dotnet pack src\Plugin.Maui.Audio.sln -c Release /p:Version=$env:VERSION --no-build --output .
+        run: dotnet pack src\Plugin.Maui.Audio.sln -c Release /p:Version=${{ steps.get_version.outputs.version }} --no-build --output .
       - name: Push
-        run: dotnet nuget push Plugin.Maui.Audio.$env:VERSION.nupkg -s https://api.nuget.org/v3/index.json -k ${NUGET_API_KEY}
+        run: dotnet nuget push Plugin.Maui.Audio.${{ steps.get_version.outputs.version }}.nupkg -s https://api.nuget.org/v3/index.json -k ${NUGET_API_KEY}
         env:
           GITHUB_TOKEN: ${{ secrets.NUGET_API_KEY }}
