Musings on how the recording could look

--- a/src/Plugin.Maui.Audio/Plugin.Maui.Audio.csproj
+++ b/src/Plugin.Maui.Audio/Plugin.Maui.Audio.csproj
@@ -37,6 +37,9 @@
 	</PropertyGroup>
 
 	<!-- iOS & MacCatalyst -->
+	<PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|net6.0-ios|AnyCPU'">
+	  <CreatePackage>false</CreatePackage>
+	</PropertyGroup>
 	<ItemGroup Condition="$(TargetFramework.StartsWith('net')) == true AND $(TargetFramework.Contains('-ios')) != true AND $(TargetFramework.Contains('-maccatalyst')) != true ">
 		<Compile Remove="**\**\*.ios.cs" />
 		<None Include="**\**\*.ios.cs" Exclude="$(DefaultItemExcludes);$(DefaultExcludesInProjectFolder)" />
@@ -74,15 +77,6 @@
 
 	<!-- Package additions -->
 	<ItemGroup>
-	  <None Remove="AudioPlayer\" />
-	  <None Remove="AudioRecorder\" />
-	</ItemGroup>
-	<ItemGroup>
 		<None Include="..\..\nuget.png" PackagePath="icon.png" Pack="true" />
-	</ItemGroup>
-
-	<ItemGroup>
-	  <Folder Include="AudioPlayer\" />
-	  <Folder Include="AudioRecorder\" />
 	</ItemGroup>
 </Project>
