--- a/.github/workflows/ci-sample.yml
+++ b/.github/workflows/ci-sample.yml
@@ -22,6 +22,6 @@ jobs:
     - name: Install .NET MAUI
       run: dotnet workload install maui
     - name: Restore dependencies
-      run: dotnet restore samples\AudioPlayerSample.sln
+      run: dotnet restore samples\Plugin.Maui.Audio.Sample.sln
     - name: Build
-      run: dotnet build samples\AudioPlayerSample.sln -c Release
+      run: dotnet build samples\Plugin.Maui.Audio.Sample.sln -c Release
