--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -21,7 +21,11 @@ jobs:
         dotnet-version: 6.0.x
     - name: Install .NET MAUI
       run: dotnet workload install maui
+    - uses: actions/setup-java@v3
+      with:
+        distribution: 'microsoft'
+        java-version: '11'
     - name: Restore dependencies
-      run: dotnet restore src\Plugin.Maui.Audio.sln
+      run: dotnet restore src\Plugin.Maui.Audio\Plugin.Maui.Audio.csproj
     - name: Build
-      run: dotnet build src\Plugin.Maui.Audio.sln -c Release
+      run: dotnet build src\Plugin.Maui.Audio\Plugin.Maui.Audio.csproj -c Release
