--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,7 +14,7 @@ jobs:
     runs-on: windows-latest
 
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@v4
 
     - name: Restore dependencies
       run: dotnet restore src\Plugin.Maui.Audio\Plugin.Maui.Audio.csproj
@@ -23,10 +23,10 @@ jobs:
       run: dotnet build src\Plugin.Maui.Audio\Plugin.Maui.Audio.csproj -c Release
 
     - name: Pack
-      run: dotnet pack src\Plugin.Maui.Audio\Plugin.Maui.Audio.csproj -o output -p:PackageVersion=2.2.0-preview1
+      run: dotnet pack src\Plugin.Maui.Audio\Plugin.Maui.Audio.csproj -o output -p:PackageVersion=2.2.0-preview${{ env.GITHUB_RUN_ID }}.${{ env.GITHUB_RUN_ATTEMPT }}
 
     - name: Add NuGet Source for Push
       run: dotnet nuget add source https://jfversluis.pkgs.visualstudio.com/Plugin.Maui.Audio/_packaging/Plugin.Maui.Audio/nuget/v3/index.json --name PrivateFeed --username ${{ secrets.PUBLISH_USER }} --password ${{ secrets.PUBLISH_PAT }}
       
     - name: Push
-      run: dotnet nuget push "output/*.nupkg" --source PrivateFeed --api-key AzureArtifacts
+      run: dotnet nuget push "output\*.nupkg" --source PrivateFeed --api-key AzureArtifacts
