--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,3 +30,16 @@ jobs:
       
     - name: Push
       run: dotnet nuget push "output\*.nupkg" --source PrivateFeed --api-key AzureArtifacts
+
+    - name: Create status
+      run: |
+        curl --request POST \
+        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.event.workflow_run.head_commit.id }} \
+        --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
+        --header 'content-type: application/json' \
+        --data '{
+          "state": "${{ github.event.workflow_run.conclusion }}",
+          "context": "NuGet Package v3.0.0-preview2.${{ github.run_id }}${{ github.run_attempt }}",
+          "target_url": "https://jfversluis.pkgs.visualstudio.com/Plugin.Maui.Audio/_packaging/Plugin.Maui.Audio/nuget/v3/index.json"
+          }' \
+        --fail
