--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,7 +35,7 @@ jobs:
       shell: bash
       run: |
         curl --request POST \
-        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.workflow_sha }} \
+        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.head_ref }} \
         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
         --header 'content-type: application/json' \
         --data '{
