--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,12 +34,13 @@ jobs:
     - name: Create status
       shell: bash
       run: |
+        PR_NUMBER=$(echo "${{ github.event.pull_request.url }}" | awk -F/ '{print $NF}')
         curl --request POST \
-        --url https://api.github.com/repos/${{ github.repository }}/statuses/a1300cc418c752a469c05077ee4d0fcc1873d083 \
+        --url https://api.github.com/repos/${{ github.repository }}/statuses/${PR_NUMBER} \
         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
         --header 'content-type: application/json' \
         --data '{
-          "state": "${{ github.event.workflow_run.conclusion }}",
+          "state": "success",
           "context": "NuGet Package v3.0.0-preview2.${{ github.run_id }}${{ github.run_attempt }}",
           "target_url": "https://jfversluis.pkgs.visualstudio.com/Plugin.Maui.Audio/_packaging/Plugin.Maui.Audio/nuget/v3/index.json"
           }' \
