--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         PR_NUMBER=$(echo "${{ github.event.pull_request.url }}" | awk -F/ '{print $NF}')
         curl --request POST \
-        --url https://api.github.com/repos/${{ github.repository }}/statuses/$PR_NUMBER \
+        --url "https://api.github.com/repos/${{ github.repository }}/statuses/${PR_NUMBER}" \
         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
         --header 'content-type: application/json' \
         --data '{
