--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -34,9 +34,8 @@ jobs:
     - name: Create status
       shell: bash
       run: |
-        COMMIT_SHA=$(git log -n 1 --pretty=format:"%H")
         curl --request POST \
-        --url https://api.github.com/repos/${{ github.repository }}/statuses/$COMMIT_SHA \
+        --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.event.pull_request.head.sha }} \
         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
         --header 'content-type: application/json' \
         --data '{
