--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -40,6 +40,7 @@ jobs:
         --url https://api.github.com/repos/${{ github.repository }}/statuses/${{ github.event.pull_request.head.sha }} \
         --header 'authorization: Bearer ${{ secrets.GITHUB_TOKEN }}' \
         --header 'content-type: application/json' \
+        --fail \
         --data-binary @- << EOF
         {
           "state": "success",
@@ -50,4 +51,3 @@ jobs:
           }
         }
         EOF
-        --fail
