--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,7 +5,7 @@ on:
     branches: [ "main" ]
     paths-ignore:
       - "**.md"
-  pull_request_target:
+  pull_request:
     branches: [ "main" ]
 
 jobs:
