--- a/samples/Plugin.Maui.Audio.Sample/Platforms/iOS/Info.plist
+++ b/samples/Plugin.Maui.Audio.Sample/Platforms/iOS/Info.plist
@@ -26,6 +26,10 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>audio</string>
+	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
 	<key>NSMicrophoneUsageDescription</key>
