--- a/samples/AddAudioCompressionTest/Platforms/iOS/Info.plist
+++ b/samples/AddAudioCompressionTest/Platforms/iOS/Info.plist
@@ -2,6 +2,10 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+
+	<key>NSMicrophoneUsageDescription</key>
+	<string>This app uses the microphone for audio recording or audio input.</string>
+	
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
 	<key>UIDeviceFamily</key>
@@ -28,5 +32,7 @@
 	</array>
 	<key>XSAppIconAssets</key>
 	<string>Assets.xcassets/appicon.appiconset</string>
+	
+	
 </dict>
 </plist>
