--- a/samples/Plugin.Maui.Audio.Sample/Plugin.Maui.Audio.Sample.csproj
+++ b/samples/Plugin.Maui.Audio.Sample/Plugin.Maui.Audio.Sample.csproj
@@ -46,7 +46,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0-preview.86" />
-	  <PackageReference Include="Microsoft.Maui.Controls" Version="$(MauiVersion)" />
+	  <PackageReference Include="SkiaSharp.Extended.UI.Maui" Version="2.0.0" />
+	  <PackageReference Include="Microsoft.Maui.Controls" Version="9.0.50" />
 	</ItemGroup>
 </Project>
